log/build_2021-11-17_17-31-36/lab_2/stdout_stderr.log
running egg_info
writing ../../build/lab_2/lab_2.egg-info/PKG-INFO
writing dependency_links to ../../build/lab_2/lab_2.egg-info/dependency_links.txt
writing entry points to ../../build/lab_2/lab_2.egg-info/entry_points.txt
writing requirements to ../../build/lab_2/lab_2.egg-info/requires.txt
writing top-level names to ../../build/lab_2/lab_2.egg-info/top_level.txt
reading manifest file '../../build/lab_2/lab_2.egg-info/SOURCES.txt'
writing manifest file '../../build/lab_2/lab_2.egg-info/SOURCES.txt'
running build
running build_py
copying lab_2/cliente.py -> /lab2_ws/build/lab_2/build/lib/lab_2
copying lab_2/servicio.py -> /lab2_ws/build/lab_2/build/lib/lab_2
running install
running install_lib
copying /lab2_ws/build/lab_2/build/lib/lab_2/cliente.py -> /lab2_ws/install/lab_2/lib/python3.8/site-packages/lab_2
copying /lab2_ws/build/lab_2/build/lib/lab_2/servicio.py -> /lab2_ws/install/lab_2/lib/python3.8/site-packages/lab_2
byte-compiling /lab2_ws/install/lab_2/lib/python3.8/site-packages/lab_2/cliente.py to cliente.cpython-38.pyc
  File "/lab2_ws/install/lab_2/lib/python3.8/site-packages/lab_2/cliente.py", line 3
    import .RPM_Interface
           ^
SyntaxError: invalid syntax

byte-compiling /lab2_ws/install/lab_2/lib/python3.8/site-packages/lab_2/servicio.py to servicio.cpython-38.pyc
  File "/lab2_ws/install/lab_2/lib/python3.8/site-packages/lab_2/servicio.py", line 1
    import .RPM_Interface
           ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/lab2_ws/install/lab_2/lib/python3.8/site-packages/lab_2-1.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/lab_2/lab_2.egg-info to /lab2_ws/install/lab_2/lib/python3.8/site-packages/lab_2-1.0.0-py3.8.egg-info
running install_scripts
Installing client script to /lab2_ws/install/lab_2/lib/lab_2
Installing service script to /lab2_ws/install/lab_2/lib/lab_2
writing list of installed files to '/lab2_ws/build/lab_2/install.log'
